[tool.poetry]
name = "elastic-securitylabs"
version = "8.5.0"
description = "A collection of utilities to help with analysis on the command line."
authors = ["Derek Ditch <dcode@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "elastic" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Typing :: Typed",
]

[tool.poetry.scripts]
eql-query    = 'elastic.securitylabs.eql_query:app'
lucene-query = 'elastic.securitylabs.lucene_query:app'

[tool.poetry.dependencies]
python         = "^3.11"
typer          = { extras = ["all"], version = "^0.7.0" }
scalpl         = "^0.4.2"
pygments       = "^2.13.0"
prompt-toolkit = "^3.0.32"
elasticsearch  = "^8.5.0"
appdirs        = "^1.4.4"
ruamel-yaml    = "^0.17.21"

[tool.poetry.group.dev.dependencies]
pytest     = "^7.2.0"
pre-commit = "^2.20.0"
black      = "^22.10.0"
flake8     = "^5.0.4"
isort      = "^5.10.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths  = ["."]

[tool.isort]
profile = "black"

[tool.pyright]
include = ["elastic", "tests"]
exclude = ["**/__pycache__"]
